# argus

./: .gitignore  README.md  flake.nix  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/argus/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: fab.dart  gradient_container.dart  main.dart  map.dart  mission_plan.dart  plot.dart
lib/create_node/: local_offset.dart
lib/edit_node/: delay.dart  takeoff.dart
lib/mission_plan/: edit_params.dart  plan.dart
lib/mission_plan/create_node/: local_offset.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: mission.dart  mission.freezed.dart  util.dart
lib/title_bar/: title_bar.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs  lib.rs  util.rs  visualize.rs
rust/src/api/: mission.rs  mod.rs  simple.rs  util.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_argus.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_argus.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
