[package]
name = "rust_lib_argus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.1.0"
argus_common = { version = "*", path = "../../ros2/src/argus_common"}
serde = { version = "1.0.204", features = ["derive"] }
postcard = "1.0.8"
nalgebra = "0.33.0"
anyhow = "1.0.86"
