[package]
name = "rust_lib_argus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.3.0", features = ["uuid"] }
argus_common = { version = "*", path = "../../ros2/src/argus_common"}
serde = { version = "1.0.204", features = ["derive"] }
postcard = { version = "1.0.8", features = ["alloc"] }
nalgebra = "0.33.0"
anyhow = "1.0.86"
tokio = { version = "1.39.1", features = ["net", "io-util"] }
futures-util = "0.3.30"
zenoh = "0.11.0"
flume = "0.11.0"
tracing-subscriber = "0.3.18"
rerun = { version = "0.18.0", default-features = false, features = ["sdk"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing = "0.1.40"
